# OpenOptimizer

./: CMakeLists.txt  MANIFEST.in  README.md  main.txt  push_to_github.sh  requirements.txt  setup.py
.github/workflows/: ci.yml
cmake/: OpenOptimizerConfig.cmake.in
codegen/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.hpp
codegen/cpu/: CPUBackend.cpp  CPUBackend.hpp
codegen/edge/: EdgeBackend.cpp  EdgeBackend.hpp
codegen/gpu/: GPUBackend.cpp  GPUBackend.hpp
frontend/cpp/: CMakeLists.txt  Optimizer.cpp  Optimizer.hpp  python_bindings.cpp
frontend/python/: optimizer.py
ir/: CMakeLists.txt  Operation.hpp
ir/graph/: ComputationGraph.cpp  ComputationGraph.hpp
ir/ops/: StandardOps.cpp  StandardOps.hpp
ir/tensor/: DataType.hpp  TensorDescriptor.hpp  TensorShape.hpp
openoptimizer/: __init__.py
openoptimizer/codegen/: __init__.py
openoptimizer/frontend/: __init__.py
openoptimizer/ir/: __init__.py  graph.py  operation.py  tensor.py
openoptimizer/ir/graph/: __init__.py
openoptimizer/ir/ops/: __init__.py
openoptimizer/ir/tensor/: DataType.py  Tensor.py  TensorDescriptor.py  TensorShape.py  __init__.py
openoptimizer/optimization/: __init__.py
openoptimizer/optimization/passes/: __init__.py
optimization/: CMakeLists.txt  OptimizationPass.cpp  OptimizationPass.hpp
optimization/passes/: OperatorFusionPass.cpp  OperatorFusionPass.hpp  __init__.py  base_pass.py  operator_fusion.py
tests/integration/: test_end_to_end.py
tests/python/: test_graph.py
tests/unit/: test_optimizer.py
visualization/desktop/: MainWindow.cpp  MainWindow.hpp
